--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "next-videos": "^1.4.1",
     "react": "^18",
